ejemplos/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: letschat-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  rules:
  - host: app2.172.22.200.178.nip.io
    http:
      paths:
      - path: "/"
        backend:
          serviceName: letschat
          servicePort: 8080
