ejemplos/ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: app.172.22.200.178.nip.ip
    http:
      paths:
      - path: /app1
        backend:
          serviceName: frontend
          servicePort: 80
      - path: /app2
        backend:
          serviceName: letschat
          servicePort: 8080
